samples/_failures_safe/1761164449_0276dc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42e25c8b.c: In function ‘main’:
./samples/SAFE/__tmp_42e25c8b.c:145:12: error: missing terminating " character
  145 |     printf("\nLog Analysis Results
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_42e25c8b.c:145:5: error: expected expression at end of input
  145 |     printf("\nLog Analysis Results
      |     ^~~~~~
./samples/SAFE/__tmp_42e25c8b.c:145:5: error: expected declaration or statement at end of input
